--- a/sim/feedforward.yaml
+++ b/sim/feedforward.yaml
@@ -1,13 +1,13 @@
 # --------------------------------- METADATA --------------------------------- #
 experiment: block
-save_path: './save'
+save_path: './sim/save'
 save_name: pagsim
 save_format: npy  # npy or mat
 b2_DEBUG: false  # keep brian2 debug logs?
 
 # ---------------------------------- PARAMS ---------------------------------- #
 # number of neurons
-n_vmh: 100
+n_vmh: 64
 n_acc: 1
 n_ic: 1
 n_sc: 1
@@ -19,7 +19,7 @@ n_pag: 1
 # external Poisson spiking units
 n_external: 500  # for each of the 5 populations
 external_firing_rate: 
-  vmh: 25 #1 #1  # Hz
+  vmh: 10 #1 #1  # Hz
   acc: 0 #1.53 #1.6 #1.4  # Hz
   ic: 0 #.3 # 0.3  # Hz
   sc: 0
@@ -37,18 +37,18 @@ synapses_probability:  # probability of synapses between two populations
 target_synapse_silencing_probability: 
 # probability that a PAG neuron receives no inputs from a source population at all.
   vmh2pag: 0
-  acc2pag: 0.25
-  ic2pag: 0.25
-  sc2pag: 0.25
-  pmd2pag: 0.25
+  acc2pag: 0.1
+  ic2pag: 0.1
+  sc2pag: 0.1
+  pmd2pag: 0.1
 
 source_synapse_silencing_probability:
 # probability that a source neuron does not project to any PAG neuron at all.
   vmh2pag: 0
-  acc2pag: 0.25
-  ic2pag: 0.25
-  sc2pag: 0.25
-  pmd2pag: 0.25
+  acc2pag: 0.1
+  ic2pag: 0.1
+  sc2pag: 0.1
+  pmd2pag: 0.1
 
 
 connectivity_kernel:  # (ones, diagonal, inverted_diagonal) or none
@@ -157,11 +157,11 @@ synapse_gmax_scaling: #multiplies both gmax early and late
   # vgat2vgat:    1 #
   # vglut2vglut:  1 #
   # vglut2vgat:   1 #
-  vmh2pag:   2
+  vmh2pag:   1
   acc2pag:   1
   ic2pag:    1
-  sc2pag:    2
-  pmd2pag:   2
+  sc2pag:    1
+  pmd2pag:   1
 
 #### properties of early response component 
 synapse_gmax_early:  # synaptic weights, in nS
@@ -171,7 +171,7 @@ synapse_gmax_early:  # synaptic weights, in nS
   # vgat2vgat:    .001 # change to change weights
   # vglut2vglut:  .11 #change to change weights 
   # vglut2vgat:   .001 #change to change weights
-  vmh2pag:   5
+  vmh2pag:   9
   acc2pag:   7
   ic2pag:    8
   sc2pag:    4
