added inhibitory neurons

--- a/sim/feedforward.yaml
+++ b/sim/feedforward.yaml
@@ -1,7 +1,7 @@
 # --------------------------------- METADATA --------------------------------- #
 experiment: block
 save_path: './save'
-save_name: pagsim_w_stimuli_short_inh
+save_name: pagsim_w_stimuli_600s_inh
 save_format: npy  # npy or mat
 b2_DEBUG: false  # keep brian2 debug logs?
 
@@ -12,24 +12,24 @@ n_acc: 32
 n_ic: 32
 n_sc: 32
 n_pmd: 32
-n_inh: 16 
+n_inh: 32
 
-n_pag: 1
+n_pag: 8
 
 
 # external Poisson spiking units
 n_external: 500  # for each of the 5 populations
 external_firing_rate: 
-  vmh: 30 #1 #1  # Hz
+  vmh: 10 #1 #1  # Hz
   acc: 10 #1.53 #1.6 #1.4  # Hz
   ic: 10 #.3 # 0.3  # Hz
   sc: 10
   pmd: 10
-  inh: 10
+  inhneuron: 10
 
 # connectivity
 synapses_probability:  # probability of synapses between two populations
-  vmh2pag: 1
+  vmh2pag: 0.3
   acc2pag: 0.30
   ic2pag: 0.25
   sc2pag: 0.20
@@ -39,7 +39,7 @@ synapses_probability:  # probability of synapses between two populations
 
 target_synapse_silencing_probability: 
 # probability that a PAG neuron receives no inputs from a source population at all.
-  vmh2pag: 0
+  vmh2pag: 0.10
   acc2pag: 0.10
   ic2pag: 0.10
   sc2pag: 0.10
@@ -48,7 +48,7 @@ target_synapse_silencing_probability:
 
 source_synapse_silencing_probability:
 # probability that a source neuron does not project to any PAG neuron at all.
-  vmh2pag: 0
+  vmh2pag: 0.10
   acc2pag: 0.10
   ic2pag: 0.10
   sc2pag: 0.10
@@ -139,6 +139,7 @@ stype: # biExp: two-component bi-exponential synapse; event-driven (Fede synapse
   ic2pag:    "event-driven"
   sc2pag:    "event-driven"
   pmd2pag:   "event-driven"
+  inh2pag:   "event-driven"
 
 E_rev:
   AMPA: 0
@@ -181,12 +182,12 @@ synapse_gmax_early:  # synaptic weights, in nS
   # vgat2vgat:    .001 # change to change weights
   # vglut2vglut:  .11 #change to change weights 
   # vglut2vgat:   .001 #change to change weights
-  vmh2pag:   8
-  acc2pag:   6
-  ic2pag:    7.5
-  sc2pag:    9
-  pmd2pag:   10.5
-  inh2pag:   -3.0
+  vmh2pag:   4.5
+  acc2pag:   6.5
+  ic2pag:    8
+  sc2pag:    9.5
+  pmd2pag:   11  
+  inh2pag:   -3
 
 tau1_early:  # rise time synaptic conductance | in milliseconds
   # rsp2vglut:    2.413 
