--- a/sim/feedforward.yaml
+++ b/sim/feedforward.yaml
@@ -1,20 +1,20 @@
 # --------------------------------- METADATA --------------------------------- #
 experiment: block
 save_path: './save'
-save_name: pagsim_w_stimuli_600s_inh
+save_name: pagsim_w_stimuli_600s_inh32
 save_format: npy  # npy or mat
-b2_DEBUG: false  # keep brian2 debug logs?
+b2_DEBUG: false  # keep brian2 debug logs?s
 
 # ---------------------------------- PARAMS ---------------------------------- #
 # number of neurons
-n_vmh: 32
-n_acc: 32
-n_ic: 32
-n_sc: 32
-n_pmd: 32
+n_vmh: 64
+n_acc: 64
+n_ic: 64
+n_sc: 64
+n_pmd: 64
 n_inh: 32
 
-n_pag: 8
+n_pag: 16
 
 
 # external Poisson spiking units
@@ -187,7 +187,7 @@ synapse_gmax_early:  # synaptic weights, in nS
   ic2pag:    8
   sc2pag:    9.5
   pmd2pag:   11  
-  inh2pag:   -3
+  inh2pag:   5
 
 tau1_early:  # rise time synaptic conductance | in milliseconds
   # rsp2vglut:    2.413 
